--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=Cartify
+spring.application.name= Cartify
+server.port = 9193
+spring.datasource.url=jdbc:mysql://localhost:3306/cartify
+
+spring.datasource.username=root
+spring.datasource.password=admin@530#
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+
+spring.jpa.show-sql= true
+spring.jpa.properties.hibernate.format_sql= true
+spring.jpa.hibernate.ddl-auto=update
